# cmaketest

./: .gitignore  CMakeLists.txt  README.md
include/: testclass.h
src/: main.cpp  testclass.cpp
